objects/Premier_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Active_User__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculate_Commissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Commissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Total_Billings__c</fullName>
        <formula>Indv_Cand_Mgr_Billings__c +  Indv_Job_Mgr_Billings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Total Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indv_Cand_Mgr_Billings__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from Roll Up Helper when Role = Candidate Manager</inlineHelpText>
        <label>Indv Cand Mgr Billings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indv_Job_Mgr_Billings__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from Roll Up Helper when Role = Job Manager</inlineHelpText>
        <label>Indv Job Mgr Billings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>TEXT( Owner:User.Location__c )</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Premier_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Premier Team Member</label>
        <referenceTo>Premier_Team_Member__c</referenceTo>
        <relationshipLabel>Premier Team Members</relationshipLabel>
        <relationshipName>Premier_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Base_Draw__c</fullName>
        <label>Monthly Base Draw</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Earnings__c</fullName>
        <label>Monthly Gross Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_Commission_Percent__c</fullName>
        <formula>IF(Individual_Total_Billings__c &gt;= 10501 &amp;&amp; Individual_Total_Billings__c &lt; 15000, 0.05, 

IF(Individual_Total_Billings__c &gt;= 15000 &amp;&amp; Individual_Total_Billings__c &lt; 20000, 0.10, 

IF(Individual_Total_Billings__c &gt;= 20000 &amp;&amp; Individual_Total_Billings__c &lt; 30000, 0.20, 

IF(Individual_Total_Billings__c &gt;= 30000 &amp;&amp; Individual_Total_Billings__c &lt; 40000, 0.30, 

IF(Individual_Total_Billings__c &gt;= 40000 &amp;&amp; Individual_Total_Billings__c &lt; 50000, 0.35, 

IF(Individual_Total_Billings__c &gt;= 50000 &amp;&amp; Individual_Total_Billings__c &lt; 60000, 0.40, 

IF(Individual_Total_Billings__c &gt;= 60000 &amp;&amp; Individual_Total_Billings__c &lt; 70000, 0.45, 

IF(Individual_Total_Billings__c &gt;= 70000 ,0.50 , 0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Commission %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>My_Commission__c</fullName>
        <formula>Individual_Total_Billings__c *  My_Commission_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Commission $</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>Owner:User.Id</formula>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTM_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <label>PTM Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pod_Commission__c</fullName>
        <formula>Owner:User.Pod_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pod Commission %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pod_Team__c</fullName>
        <formula>TEXT( Owner:User.Pod_Team__c )</formula>
        <label>Pod Team #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Positive_Billing_Credits__c</fullName>
        <label>Sum of Positive Billing Credits</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Cand_Mgr_Billings__c</fullName>
        <label>Team Cand Mgr Billings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Job_Mgr_Billings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Team Job Mgr Billings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Premier_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Premier Team Member</label>
    <nameField>
        <displayFormat>PTM-{00000}</displayFormat>
        <label>Premier Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premier Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>